--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RONALD BAMUTESIZA| CSE 121B| BYU-idaho</title>
+    <script src="jst.js"></script>
 </head>
 <body>
     <h1>RONALD BAMUTESIZA| CSE 121B| BYU-idaho</h1>
     <h2>Bugembe Jinja, Bugembe</h2>
     <hr>
-    
+    <button>Change user</button>
 </body>
 </html>
