fixed some errors

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 </head>
 <body>
     <h1>RONALD BAMUTESIZA| CSE 121B| BYU-idaho</h1>
-    <h2>Bugembe Jinja, Bugembe</h2>
-    <hr>
-    <button>Change user</button>
+    <h2>Bugembe Jinja, Bugembe</h2><hr>
 </body>
 </html>
