--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <script src="jst.js"></script>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="w01-task.html">w01-task</a>
+        </nav>
+    </header>
     <h1>RONALD BAMUTESIZA| CSE 121B| BYU-idaho</h1>
     <h2>Bugembe Jinja, Bugembe</h2><hr>
 </body>
